styles/style.css
@import url('https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&family=Josefin+Sans:wght@300;700&display=swap');

* {
    box-sizing: border-box;
    font-family: 'Josefin Sans', sans-serif;
    font-weight: 300;
}

html, body {
    font-size: 16px;
    height: 100%;
    margin: 0;
}

body {
    background: #84B8F0;
}

.main{
    height: 100%;
    max-width: 100%;
}

#game-div {
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
    align-items: center;
    width: 100%;
    height: 50%;
}

.start-button-div {
    display: flex;
    justify-content: center;
}

#start-button {
    height: 3rem ;
    width: 5.5rem;
}

#next-button {
    height: 3rem;
    width: 12rem;
}

#play-again-button, #exit-button {
    height: 2.75rem;
    width: 9rem;
}

.main, #game-parent {
    display: flex;
    flex-wrap: nowrap;
    flex-direction: column;
    align-items: center;
}

#game-parent {
    justify-content: center;
    margin: auto;
    max-width: 50vw;
    min-width: 50vw;
    height: 100%;
}

#question-div {
    display: flex;
    justify-content: center;
    align-items: center;
    min-height: 13vh;
    width: 60%;
}

#question {
    word-wrap: break-word;
    font-size: 1.5em;
}

.answer-div {
    display: flex;
    align-items: center;
    justify-content: center;
    text-align: center;
    margin: 5px;
    border: 5px solid black;
    width: 40vw;
    min-height: 75px;
    height: 10vh;
    background: #F0BA9C;
    font-size: 1.5em;
}

.answers {
    margin: 0;
    height: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
}

.title-class {
    margin-top: 20vh;
    margin-bottom: 4vh;
    font-size: 4rem;
    line-height: 60px;
    width: 100%;
    text-align: center;
}

.explanation {
    font-size: 2rem;
    text-align: center;
}

.dropdown, .buttons {
    font-size: 1.5rem;
}

.dropdown:hover, option:hover, .answers:hover {
    cursor: pointer;
}

.answers:hover {
    background:#D99582;
    transition-delay: 3ms;
}

.buttons:hover {
    cursor: pointer;
    background: #D99582;
}

.scoring {
    display: flex;
    flex-direction: column;
    text-align: center;
    justify-content: space-evenly;
    background: white;
    font-size: 2em;
    font-size: 3vw;
    overflow: hidden;
    width: 15vw;
    height: 20vw;
    border: 5px solid black;  
    margin: auto;
}

.score-number {
    display: block;
}

#correct-status-div {
    height: 5vh;
}

#correct-status {
    visibility: hidden;
    font-size: 2em;
    margin: 0;
}

label {
    padding-top: 1rem;
}

.main-items {
    padding: 1rem;
}

.buttons {
    background-color: #F0BA9C;
    border: 3px solid black;
    margin-top: 2rem;
}

#final-buttons {
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
    align-items: center;
    width: 40%;
}

.make-visible {
    opacity = 1;
}

.make-invisible {
    opacity = 0;
}

.hide {
    display: none;
}

.show {
    display: initial;
}

.show-flex {
    display: flex;
}

